<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:text="Question 1."/>

        <TextView
            android:id="@+id/questionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/quesitonOne"
            android:textAlignment="gravity"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1A"
                android:textAppearance="?android:textAppearanceMedium"/>
            <RadioButton
                android:id="@+id/answer1B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1B"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/answer1C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1C"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/answer1D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1D"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:text="Question 2."/>

        <TextView
            android:id="@+id/questionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:textAlignment="gravity"
            android:text="@string/quesitonTwo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="30dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/answer2A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2A"
                android:textAppearance="?android:textAppearanceMedium"/>
            <CheckBox
                android:id="@+id/answer2B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2B"
                android:textAppearance="?android:textAppearanceMedium"/>
            <CheckBox
                android:id="@+id/answer2C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2C"
                android:textAppearance="?android:textAppearanceMedium"/>
            <CheckBox
                android:id="@+id/answer2D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2D"
                android:textAppearance="?android:textAppearanceMedium"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:text="Question 3."/>

        <TextView
            android:id="@+id/questionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:textAlignment="gravity"
            android:text="@string/quesitonThree"/>

        <EditText
            android:id="@+id/answerThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:hint="Type your answer here"
            android:inputType="number"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:text="Question 4."/>

        <TextView
            android:id="@+id/questionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:textAlignment="gravity"
            android:text="@string/quesitonFour"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer4A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4A"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/answer4B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4B"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/answer4C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4C"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/answer4D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4D"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:text="Question 5."/>

        <TextView
            android:id="@+id/questionFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="20sp"
            android:textAlignment="gravity"
            android:text="@string/quesitonFive"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer5A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5A"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/answer5B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5B"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/answer5C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5C"
                android:textAppearance="?android:textAppearanceMedium" />
            <RadioButton
                android:id="@+id/answer5D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5D"
                android:textAppearance="?android:textAppearanceMedium" />

        </RadioGroup>


        <Button
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="submit"
            android:onClick="onClickSubmit"/>

    </LinearLayout>
</ScrollView>
